[package]
name = "apns"
description = "Apple Push Notification Service (apns) client library"
version = "0.1.0"
authors = ["Christoph Herzog <chris@theduke.at>"]
license = "MIT/Apache-2.0"
readme = "README.md"
categories = ["network-programming"]
documentation = "https://docs.rs/apns2"
repository = "https://github.com/theduke/apns2-rust"

[dependencies]
byteorder = "1"
failure = "0.1.1"
openssl = { version = "0.7.14", features = ["tlsv1_2", "npn", "alpn"] }
serde = "1.0.34"
serde_derive = "1.0.34"
serde_json = "1.0.9"
solicit = { git = "https://github.com/aagahi/solicit", features = ["tls"] }
uuid = { version = "0.6.0", features = ["serde", "v4"] }
